cabal-version:      3.0
name:               advent2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common requires
    build-depends:
        base ^>=4.16.4.0,
        transformers ^>= 0.6.1.1,
        vector ^>= 0.13.0.0,
        text ^>= 2.1,
        vector-algorithms ^>= 0.9.0.1,
        parsec ^>= 3.1.17.0,
        lens ^>= 5.2.3,
        bytestring ^>= 0.12.0.2,
    
library advent2023-lib
    import: requires
    hs-source-dirs:   app
    exposed-modules: 
        Day01,
        Day02,
        Day03,


executable advent2023
    import: requires
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
    build-depends:
        advent2023-lib
    default-language: Haskell2010
    other-modules:
        Day01
    

test-suite tests
    import: requires
    type:                exitcode-stdio-1.0
    hs-source-dirs:      tests
    build-depends:
        advent2023-lib,
        HUnit ^>= 1.6.2.0,
    main-is:             Suite.hs
    default-language: Haskell2010
